--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
+    <img src="me.jfif" alt="">
+    <img src="me.jfif" alt="">
 </body>
 </html>
